--- a/public/main.css
+++ b/public/main.css
@@ -4,7 +4,26 @@
 }
 
 .wait-indicator {
-  position: absolute;
-  margin-left: 5px;
-  width: 20px;
+  display:block;
+  margin:auto;
+  margin-top: 350px;
+  width:200px;
+}
+
+.upload-input {
+  
+}
+.upload-input input{
+  border:1px solid blue;
+  margin:auto;
+  display: block;
+  margin-top: 500px;
+}
+
+.main-image {
+
+  margin:auto;
+  display: block;
+  margin-top: 300px;
+  width:300px;
 }
