--- a/public/main.css
+++ b/public/main.css
@@ -1,23 +1,35 @@
+p {
+  font-family: Montserrat, sans-serif;
+}
+
 .error {
   color: red;
   font-weight: bold;
 }
 
+h1 {
+  font-family: Montserrat, sans-serif;
+}
 .logofont {
+  font-size: 48px;
   font-family: Righteous;
   font-weight: normal;
+  position: relative;
+  top: 16px;
 }
 .logoquestion {
+  font-size: 48px;
   font-family: Righteous;
   font-weight: normal;
-  margin: -16px 0px 0px 0px;
+  bottom: -9px;
+  position: relative;
 }
 
 .wait-indicator {
   display:block;
   margin:auto;
-  margin-top: 350px;
-  width:200px;
+  margin-top: 64px;
+  width: 200px;
 }
 
 .upload-input {
@@ -27,13 +39,14 @@
   border:1px solid blue;
   margin:auto;
   display: block;
-  margin-top: 500px;
+  margin-top: 32px;
+  margin-bottom: 480px;
 }
 
 .main-image {
 
   margin:auto;
   display: block;
-  margin-top: 300px;
+  margin-top: 64px;
   width:300px;
 }
