--- a/public/main.css
+++ b/public/main.css
@@ -18,6 +18,7 @@ h1 {
   top: 16px;
 }
 .logoquestion {
+  color: rgb(243, 178, 0);
   font-size: 48px;
   font-family: Righteous;
   font-weight: normal;
