--- a/public/main.css
+++ b/public/main.css
@@ -1,3 +1,5 @@
+
+
 p {
   font-family: Montserrat, sans-serif;
 }
@@ -10,6 +12,7 @@ p {
 h1 {
   font-family: Montserrat, sans-serif;
 }
+
 .logofont {
   font-size: 48px;
   font-family: Righteous;
@@ -17,6 +20,7 @@ h1 {
   position: relative;
   top: 16px;
 }
+
 .logoquestion {
   color: rgb(243, 178, 0);
   font-size: 48px;
@@ -27,27 +31,48 @@ h1 {
 }
 
 .wait-indicator {
-  display:block;
-  margin:auto;
+  display: block;
+  margin: auto;
   margin-top: 64px;
   width: 200px;
 }
 
-.upload-input {
-  
-}
-.upload-input input{
-  border:1px solid blue;
-  margin:auto;
+.upload-input input {
+  position: fixed;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+  width: 70vh;
+  height: 70vh;
+  background-color: aqua;
+  border: none;
+  margin: auto;
   display: block;
+  text-decoration: none;
   margin-top: 32px;
   margin-bottom: 480px;
+  top: 50%;
+  transform: translate(0%, -50%);
 }
+
+.dropzone {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+  width: 70vh;
+  height: 70vh;
+  -webkit-box-shadow: 0px 0px 23px 2px rgba(0, 0, 0, 0.38);
+  -moz-box-shadow: 0px 0px 23px 2px rgba(0, 0, 0, 0.38);
+  box-shadow: 0px 0px 23px 2px rgba(0, 0, 0, 0.38);
+  background-color: blanchedalmond;
+}
+
+.btn-primary {}
 
 .main-image {
-  margin:auto;
+  margin: auto;
   display: block;
   margin-top: 64px;
-  width:300px;
+  width: 300px;
 }
-
