--- a/public/main.css
+++ b/public/main.css
@@ -1,5 +1,3 @@
-
-
 p {
   font-family: Montserrat, sans-serif;
 }
@@ -12,6 +10,7 @@ p {
 h1 {
   font-family: Montserrat, sans-serif;
 }
+
 .logofont {
   font-size: 48px;
   font-family: Righteous;
@@ -30,31 +29,22 @@ h1 {
 }
 
 .wait-indicator {
+  position: absolute;
   display: block;
   margin: auto;
   margin-top: 64px;
-  width: 200px;
+  width: 300px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%)
 }
 
-.upload-input input {
-  position: fixed;
-  border-radius: 50%;
-  transform: translate(-50%, -50%);
-  width: 70vh;
-  height: 70vh;
-  background-color: aqua;
-  border: none;
-  margin: auto;
-  display: block;
-  text-decoration: none;
-  margin-top: 32px;
-  margin-bottom: 480px;
-  top: 50%;
-  transform: translate(0%, -50%);
-}
 
 .dropzone {
-  position: fixed;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   top: 50%;
   left: 50%;
   border-radius: 50%;
@@ -64,7 +54,37 @@ h1 {
   -webkit-box-shadow: 0px 0px 23px 2px rgba(0, 0, 0, 0.38);
   -moz-box-shadow: 0px 0px 23px 2px rgba(0, 0, 0, 0.38);
   box-shadow: 0px 0px 23px 2px rgba(0, 0, 0, 0.38);
-  background-color: blanchedalmond;
+  background-color: rgb(243, 178, 0);
+  -webkit-transition: box-shadow 0.7s, background-color 0.7s;
+  transition: box-shadow 0.7s, background-color 0.7s;
+}
+
+.dropzone h1 {
+  color: whitesmoke;
+  font-size: 2.5vh;
+  text-align: center;
+  top: 50%;
+  left: 0;
+  position: absolute;
+  right: 0;
+}
+
+.dropzone:hover {
+  color: rgb(197, 196, 196);
+  -webkit-box-shadow: 0px 0px 23px 4px rgba(0, 0, 0, 0.38);
+  -moz-box-shadow: 0px 0px 23px 4px rgba(0, 0, 0, 0.38);
+  box-shadow: 0px 0px 23px 4px rgba(0, 0, 0, 0.38);
+  background-color: rgb(253, 210, 92)
+}
+
+.upload-input input {
+  position: relative;
+  top: 50%;
+  border-radius: 50%;
+  width: 70vh;
+  height: 70vh;
+  text-decoration: none;
+  opacity: 0;
 }
 
 .btn-primary {}
