--- a/public/main.css
+++ b/public/main.css
@@ -63,5 +63,22 @@ h1 {
 }
 
 .done {
-  max-width: 512px;
+  width:1000px;
+  font-size: 30px;
+
+}
+
+.wiki-container {
+  margin:auto;
+  position: absolute;
+  margin-top:17vh;
+  left:50%;
+  transform: translate(-50%,0);
+  width:1000px;
+
+  
+}
+
+.wiki-container h2{
+  font-size: 40px;
 }
