--- a/public/main.css
+++ b/public/main.css
@@ -45,7 +45,7 @@ h1 {
   display: block;
   margin: auto;
   margin-top: 64px;
-  width: 300px;
+  width: 200px;
   top: 40%;
   left: 50%;
   transform: translate(-50%, -50%)
@@ -104,7 +104,10 @@ h1 {
 .main-image {
   margin: auto;
   display: block;
-  margin-top: 64px;
+  top: 50%;
+  left:50%;
+  transform: translate(-50%,-50%);
+  position: absolute;
   width:300px;
 }
 
@@ -126,5 +129,5 @@ h1 {
 }
 
 .wiki-container h2{
-  font-size: 40px;
+  font-size: 60px;
 }
